// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments when there are comments renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "borderTopRightRadius": 5,
      "flex": 1,
      "width": "100%",
    }
  }
>
  <ScrollViewMock>
    <CommentsLoop
      comments={
        Array [
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/profile-pic-may.jpg",
              },
              "name": "May F",
            },
            "body": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
            "dateCreated": 2019-01-01T00:00:00.000Z,
            "id": "21097",
            "replies": Array [],
            "title": "Meu pai fez o que ela mandou…",
            "totalReplies": 0,
          },
        ]
      }
      header={
        <Header
          comments={
            Array [
              Object {
                "author": Object {
                  "avatarPath": Object {
                    "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                  },
                  "name": "May F",
                },
                "body": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                "dateCreated": 2019-01-01T00:00:00.000Z,
                "id": "21097",
                "replies": Array [],
                "title": "Meu pai fez o que ela mandou…",
                "totalReplies": 0,
              },
            ]
          }
          description="A simple string"
        />
      }
      noComments="Nenhum comentário ainda - faça o primeiro!"
      onPress={[Function]}
    />
  </ScrollViewMock>
  <TextField
    buttonText="Comentar"
    inputText="Adicione o seu comentário..."
    onChangeText={[Function]}
    onSubmit={[Function]}
    value=""
  />
</View>
`;

exports[`Comments when there are no comments renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "borderTopRightRadius": 5,
      "flex": 1,
      "width": "100%",
    }
  }
>
  <ScrollViewMock>
    <CommentsLoop
      comments={Array []}
      header={
        <Header
          comments={Array []}
          description="A simple string"
        />
      }
      noComments="Nenhum comentário ainda - faça o primeiro!"
      onPress={[Function]}
    />
  </ScrollViewMock>
  <TextField
    buttonText="Comentar"
    inputText="Adicione o seu comentário..."
    onChangeText={[Function]}
    onSubmit={[Function]}
    value=""
  />
</View>
`;
